k8s-cluster/postgress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgres-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      component: postgres
  template: 
    metadata:
      labels: 
        component: postgres
    spec:
      volumes: 
        - name: mypvc
          persistentVolumeClaim:
            claimName: database-pvc 
      containers: 
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: mypvc
              mountPath: /var/lib/postgresql/data
